// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-action-blocks> Component Basic usage 1`] = `
<bolt-action-blocks valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Border in between each block: false 1`] = `
<bolt-action-blocks valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Border in between each block: true 1`] = `
<bolt-action-blocks valign="start"
                    max-items-per-row="6"
                    borderless
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6 c-bolt-action-blocks--borderless">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Deprecated props still render as expected 1`] = `
<bolt-action-blocks valign="center"
                    max-items-per-row="2"
                    borderless
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--valign-center c-bolt-action-blocks--item-max-2 c-bolt-action-blocks--borderless">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Subcomponent renders as expected 1`] = `
<bolt-action-block>
  <a href="#!"
     class="c-bolt-action-block"
  >
    <div class="c-bolt-action-block__item c-bolt-action-block__icon">
      <bolt-icon name="download"
                 size="large"
      >
      </bolt-icon>
    </div>
    <div class="c-bolt-action-block__item c-bolt-action-block__text">
      Item 1
    </div>
  </a>
</bolt-action-block>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: center 1`] = `
<bolt-action-blocks valign="center"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--valign-center c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: end 1`] = `
<bolt-action-blocks valign="end"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--valign-end c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: start 1`] = `
<bolt-action-blocks valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="download"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a href="#!"
           class="c-bolt-action-block"
        >
          <div class="c-bolt-action-block__item c-bolt-action-block__icon">
            <bolt-icon name="calendar"
                       size="large"
            >
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;
